--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap');
 h1{
-    text-align: center;
+    text-align:center;
+    font-style: italic;
+    font-family: 'Montserrat', sans-serif;
 }
 p{
     text-align: center;
 }
 body{
-    color:rgb(252, 252, 252);
-    background-color: black;
-    background-image: url('imagenes/log_misiones.png');
-    background-position: left 1234567899876543210%;
+    color:rgb(22, 14, 14);
+    background-color: rgb(250, 250, 250);
     /*background-attachment: fixed;*/
     background-size: cover;
+    font-weight: 800;
+    font-size: 1.2em;
 
 
+}
+
+.etiqueta {
+  font-size: 1.5em;
+  float: left;
+}
+
+.alineacion-imagen{
+    float: right;
+}
+h1{
+    text-align: center;
+    font-family: 'Scheherazade New', serif;
 }
