--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,66 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 h1{
     text-align:center;
     font-style: italic;
     font-family: 'Montserrat', sans-serif;
+    color: floralwhite;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(32,10,154,1) 30%, rgba(0,212,255,1) 100%); 
+    
+
 }
-p{
+
+.misiones{
+    background-color: mintcream;
+    font-size:1.2em;
+    color: black;
     text-align: center;
+   
+
 }
-body{
+.misiones p {
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    font-size: 1.2em;
+    
+
+}
+
+.body-comun{
+
     color:rgb(22, 14, 14);
-    background-color: rgb(250, 250, 250);
     /*background-attachment: fixed;*/
     background-size: cover;
     font-weight: 800;
     font-size: 1.2em;
-
+    background-image:url("imagenes/posadas.jpg");
+    color: white;
 
 }
 
 .etiqueta {
-  font-size: 1.5em;
-  float: left;
+    font-size: 1.1em;
+    color: rgb(169, 149, 250);
+    float: left;
+    text-align: center;
+    background-color: mintcream;
+ 
 }
 
 .alineacion-imagen{
     float: right;
+
 }
-h1{
-    text-align: center;
+
+.body-comun p{
+  
     font-family: 'Scheherazade New', serif;
+    text-align: center;
+
 }
+
+
+
